[gd_scene load_steps=5 format=3 uid="uid://c6yic2vk5pvk8"]

[ext_resource type="PackedScene" path="res://src/UI/Menus/Characters/CharacterSelector.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://bnojrawuktfoy" path="res://src/UI/Menus/Characters/CharacterCreator.tscn" id="2"]
[ext_resource type="PackedScene" path="res://src/UI/Elements/Button.tscn" id="3"]
[ext_resource type="Script" path="res://src/UI/Menus/Characters/CharacterMenu.gd" id="6"]

[node name="CharacterMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("6")

[node name="CharacterSelector" parent="." instance=ExtResource("1")]
layout_mode = 0

[node name="CharacterCreator" parent="." instance=ExtResource("2")]
visible = false
layout_mode = 0
anchors_preset = 0

[node name="LogOutButton" parent="." instance=ExtResource("3")]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Log out"
flat = true

[connection signal="new_character_requested" from="CharacterCreator" to="." method="_on_CharacterCreator_new_character_requested"]
[connection signal="pressed" from="LogOutButton" to="." method="_on_LogOutButton_pressed"]
